crates/cribo/tests/snapshots/ruff_lint_results@collections_abc_wrapper.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/collections_abc_wrapper/main.py
---
RuffLintResults {
    f401_violations: [],
    f404_violations: [],
    other_violations: [
        "Line 5: unused-import - `collections.abc.Mapping` imported but unused",
    ],
    total_violations: 1,
}
